--- a/play/zFXPzKkT/manifest.json
+++ b/play/zFXPzKkT/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Now Playing",
   "short_name": "NowPlaying",
-  "start_url": "./",
+  "start_url": "./play/zFXPzKkT",
   "display": "standalone",
   "background_color": "#111111",
   "theme_color": "#111111",
